--- a/mobile-chat/package.json
+++ b/mobile-chat/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile-chat",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,21 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/stack": "^7.3.3",
-    "axios": "^1.9.0",
-    "expo": "~53.0.11",
-    "expo-status-bar": "~2.2.3",
-    "formik": "^2.4.6",
-    "react": "19.0.0",
-    "react-native": "0.79.3",
-    "react-native-elements": "^3.4.3",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1",
-    "react-native-vector-icons": "^10.2.0",
-    "socket.io-client": "^4.8.1",
-    "yup": "^1.6.1"
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
+    "expo": "~49.0.15",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
