--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/chatapp
+PORT=5000  
+MONGO_URI=mongodb://localhost:27017/chatapp 
+JWT_SECRET=G@f92#jLs82z!KwXmNpQw@53nA  
